# rate-level-training

./: .bash_history  .bashrc  .gitconfig
Rate-level-training/: CMakeLists.txt  Cargo.toml  mod.json
Rate-level-training/.github/workflows/: build.yml
Rate-level-training/src/: main.cpp
downloads/: Calendar mod.geode  untitled.txt
